# demonstration-information

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup_shell.sh
configs/bc/: droid_filter.py  robocrowd_act_filter.py  robomimic_image_filter.py
configs/quality/: bc_droid.py  bc_robomimic_image.py  bc_robomimic_state.py  infonce_droid.py  infonce_robomimic_image.py  infonce_robomimic_state.py  mine_droid.py  mine_robomimic_image.py  mine_robomimic_state.py  sweep_droid.json  sweep_droid_vae.json  sweep_robomimic_image.json  sweep_robomimic_image_vae.json  sweep_robomimic_state.json  sweep_robomimic_state_vae.json  vae_droid.py  vae_robomimic_image.py  vae_robomimic_state.py  vip_droid.py  vip_robomimic_image.py  vip_robomimic_state.py
deminf_pytorch/: README.md  datasets.py  deminf_pytorch.py  example_robomimic.py  example_viola.py
deminf_pytorch/deminf_models/: action_vae.pth  state_vae.pth
deminf_pytorch/deminf_robomimic_models/: action_vae.pth  config.json  quality_scores.npy  state_vae.pth
openx/algs/: bc.py  beta_vae.py  core.py  info_nce.py  mine.py  vip.py
openx/data/: core.py  dataloader.py  filters.py  mixes.py  transforms.py  utils.py
openx/envs/: aloha_client.py  droid.py  robomimic.py  wrappers.py
openx/networks/: core.py
openx/utils/: evaluate.py  logger.py  spec.py
rlds/robomimic/: README.md  convert_all.sh  robomimic_dataset_builder.py
scripts/: test.py  train.py
scripts/bc/: train_bc_viola.py
tools/: generate_quality_sweep.py  run_local.py  run_slurm.py  run_tpu.py  utils.py
(+26 files in other folders)
