[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openx"
version = "0.0.1"
description = "openx experimentation package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Joey Hejna", email = "jhejna@cs.stanford.edu" },
]
license = { file = "LICENSE" }

classifiers = [
    "Topic :: openx",
    "Private :: Do Not Upload"
]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["A", "B", "C90", "E", "F", "I", "I001", "N", "RUF", "W", "RET", "TC", "PL", "SIM", "TC", "NPY"]
lint.ignore = ["A002", "A003", "B027", "C901", "RUF012", "PLR", "NPY002"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
